--- a/PrimeDatingSaver/Nlog.config
+++ b/PrimeDatingSaver/Nlog.config
@@ -14,21 +14,18 @@
       </target>
     </target>
 
-    <!--<target name="OracleDatabaseWrapper" xsi:type="Database" keepConnection="false" useTrnsactions="true"
-            dbProvider="Oracle.ManagedDataAccess.Client.OracleConnection, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"
-            connectionString="Data Source=(DESCRIPTION = (ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = kacolldbu02.alfa.bank.int)(PORT = 1521)))(CONNECT_DATA = (SERVICE_NAME = COLLECTSM_R.center.kiev.ua.alfabank)));User ID=LOGGER;Password=LOGGER;"
-            commandText="INSERT INTO LOGINFO (datetime, messagelevel, message, appname, exception, source, userid) VALUES (sysdate, :LOGLEVEL, :MESSAGE, :APPNAME, :EXCEPTION, :SOURCE, :USERID)">
-      <parameter name="LOGLEVEL" layout="${level:uppercase=true}" />
+    <target name="DatabaseWrapper" xsi:type="Database" keepConnection="false" useTrnsactions="true"
+            dbProvider="System.Data.SqlClient"
+            connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=PrimeDatingData;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+            commandText="INSERT INTO LOGINFO (DateTime, Level, Message, Exception) VALUES (SYSDATETIME(), :LEVEL, :MESSAGE, :EXCEPTION)">
+      <parameter name="LEVEL" layout="${level:uppercase=true}" />
       <parameter name="MESSAGE" layout="${message}" />
-      <parameter name="APPNAME" layout="AlfaCollection.Web" />
       <parameter name="EXCEPTION" layout="${exception:format=ToString}" />
-      <parameter name="SOURCE" layout="${stacktrace:format=Flat:topFrames=8:skipFrames=0}" />
-      <parameter name="USERID" layout="MachineName: ${machinename}; UserName: ${windows-identity}" />
-    </target>-->
+    </target>
 
   </targets>
   <rules>
     <logger minlevel="Trace" maxlevel="Fatal" name="*" writeTo="AsyncWrapperFile"/>
-    <logger minlevel="Trace" maxlevel="Fatal" name="*" writeTo="OracleDatabaseWrapper"/>
+    <logger minlevel="Trace" maxlevel="Fatal" name="*" writeTo="DatabaseWrapper"/>
   </rules>
 </nlog>
