--- a/PrimeDating.Models/PrimeDating.Models.csproj
+++ b/PrimeDating.Models/PrimeDating.Models.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminArea.cs" />
     <Compile Include="DailyDataDto.cs" />
     <Compile Include="GiftDto.cs" />
     <Compile Include="GirlDto.cs" />
