--- a/PrimeDatingSaver/Nlog.config
+++ b/PrimeDatingSaver/Nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:sl="http://www.nlog-project.org/schemas/NLog.Targets.Syslog.xsd"
       autoReload="true"
-      throwExceptions="false">
+      throwExceptions="true">
   <variable name="Encoding" value="utf-8" />
   <variable name="MessageLayout" value="${longdate}|${level}|${threadid}| ${message} | ${exception:format=ToString}" />
   <targets>
@@ -14,13 +14,13 @@
       </target>
     </target>
 
-    <target name="DatabaseWrapper" xsi:type="Database" keepConnection="false" useTrnsactions="true"
+    <target name="DatabaseWrapper" xsi:type="Database" keepConnection="false"
             dbProvider="System.Data.SqlClient"
             connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=PrimeDatingData;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-            commandText="INSERT INTO LOGINFO (DateTime, Level, Message, Exception) VALUES (SYSDATETIME(), :LEVEL, :MESSAGE, :EXCEPTION)">
-      <parameter name="LEVEL" layout="${level:uppercase=true}" />
-      <parameter name="MESSAGE" layout="${message}" />
-      <parameter name="EXCEPTION" layout="${exception:format=ToString}" />
+            commandText="INSERT INTO LOGGING (DateTime, Level, Message, Exception) VALUES (SYSDATETIME(), @LEVEL, @MESSAGE, @EXCEPTION)">
+      <parameter name="@LEVEL" layout="${level:uppercase=true}" />
+      <parameter name="@MESSAGE" layout="${message}" />
+      <parameter name="@EXCEPTION" layout="${exception:format=ToString}" />
     </target>
 
   </targets>
