--- a/PrimeDating.DataAccess/PrimeDating.DataAccess.csproj
+++ b/PrimeDating.DataAccess/PrimeDating.DataAccess.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Interfaces\IPaymentsDataService.cs" />
     <Compile Include="Interfaces\IQueryFluent.cs" />
     <Compile Include="Interfaces\IQueryObject.cs" />
+    <Compile Include="Interfaces\IReportsData.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="ManagerDataService.cs" />
     <Compile Include="MenDataService.cs" />
@@ -104,6 +105,7 @@
     <Compile Include="PrimeDatingContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryFluent.cs" />
+    <Compile Include="ReportsData.cs" />
     <Compile Include="Repository.cs" />
   </ItemGroup>
   <ItemGroup>
