--- a/PrimeDatingSaver/packages.config
+++ b/PrimeDatingSaver/packages.config
@@ -36,6 +36,11 @@
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net462" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
   <package id="Unity" version="5.8.6" targetFramework="net462" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
