--- a/PrimeDating.Models/PrimeDating.Models.csproj
+++ b/PrimeDating.Models/PrimeDating.Models.csproj
@@ -88,6 +88,7 @@
     <Compile Include="PaymentItemDto.cs" />
     <Compile Include="PaymentsStatisticDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\Gift.cs" />
     <Compile Include="Reports\Girl.cs" />
     <Compile Include="Reports\Manager.cs" />
     <Compile Include="Reports\Payments.cs" />
