--- a/PrimeDating.Models/PrimeDating.Models.csproj
+++ b/PrimeDating.Models/PrimeDating.Models.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="AdminArea.cs" />
     <Compile Include="DailyDataDto.cs" />
+    <Compile Include="Database\Users.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="GiftDto.cs" />
     <Compile Include="GirlDto.cs" />
@@ -88,10 +89,12 @@
     <Compile Include="PaymentItemDto.cs" />
     <Compile Include="PaymentsStatisticDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\AdminAreaStatistic.cs" />
     <Compile Include="Reports\Gift.cs" />
     <Compile Include="Reports\Girl.cs" />
     <Compile Include="Reports\Manager.cs" />
     <Compile Include="Reports\Payments.cs" />
+    <Compile Include="UserDto.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
